RESOLVED FIXED219071
[Web Animations] Ensure we don't schedule animation udpates when there are no styles to update
https://bugs.webkit.org/show_bug.cgi?id=219071
Summary [Web Animations] Ensure we don't schedule animation udpates when there are no...
Antoine Quint
Reported 2020-11-18 01:44:13 PST
[Web Animations] Ensure we don't schedule animation udpates when there are no styles to update
Attachments
Patch (6.20 KB, patch)
2020-11-18 01:48 PST, Antoine Quint
no flags
Antoine Quint
Comment 1 2020-11-18 01:48:08 PST
EWS
Comment 2 2020-11-18 09:52:03 PST
Committed r269963: <https://trac.webkit.org/changeset/269963> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414431 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-18 09:53:19 PST
Note You need to log in before you can comment on or make changes to this bug.